tests/NormalTests/paczka1/fuzzy1/52977729.err
Error in line 19: L1i8RJKTc9P A141 99,5
Error in line 25: 3Q57 S777 45,7
Error in line 13: S959 S416 48,1
